[gd_scene load_steps=16 format=2]

[ext_resource path="res://Track.tscn" type="PackedScene" id=1]
[ext_resource path="res://NoteManager.gd" type="Script" id=2]
[ext_resource path="res://Piston.tscn" type="PackedScene" id=3]
[ext_resource path="res://SceneManager.gd" type="Script" id=4]
[ext_resource path="res://Floor.tscn" type="PackedScene" id=5]
[ext_resource path="res://fen.wav" type="AudioStream" id=6]
[ext_resource path="res://Floor.gd" type="Script" id=7]
[ext_resource path="res://TWall.tscn" type="PackedScene" id=8]
[ext_resource path="res://dynamite.wav" type="AudioStream" id=9]
[ext_resource path="res://Marker.tscn" type="PackedScene" id=10]
[ext_resource path="res://bumblebee.wav" type="AudioStream" id=11]
[ext_resource path="res://Camera.gd" type="Script" id=12]
[ext_resource path="res://Bumblebee.gd" type="Script" id=13]
[ext_resource path="res://Dynamite.gd" type="Script" id=14]

[sub_resource type="Animation" id=1]
resource_name = "Swoop"
length = 3.0
tracks/0/type = "transform"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 0, 33.6951, -41.0379, 9.34475e-08, 0.819152, 0.573577, -1.33457e-07, 1, 1, 1, 3, 1, 0, 18.3557, -41.0379, -6.88531e-08, 0.906308, 0.422618, 1.47656e-07, 1, 1, 1 )

[node name="Root" type="Spatial"]

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, -2.49609e-07, 2.09447e-07, -2.84217e-14, 0.642788, 0.766044, -3.25841e-07, 0.766044, -0.642788, 0, 18.3557, -41.0379 )
script = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera"]
anims/Swoop = SubResource( 1 )

[node name="SceneManager" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="NoteManager" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="Background" type="Spatial" parent="."]

[node name="Floor" parent="Background" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.4868, 0 )
script = ExtResource( 7 )

[node name="Tracks" type="Spatial" parent="."]

[node name="A_Track" type="Spatial" parent="Tracks"]

[node name="Track" parent="Tracks/A_Track" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, 17.5, 0, 0 )

[node name="Piston" parent="Tracks/A_Track" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.5, 17.4251, -0.966136, -32.9984 )

[node name="Wall_Left" parent="Tracks/A_Track" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, 19.4037, -0.125678, 0 )

[node name="Wall_Right" parent="Tracks/A_Track" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, 15.4973, -0.125678, 0 )

[node name="A_Marker" parent="Tracks/A_Track" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.25, 17.5, 0.15, -33 )

[node name="S_Track" type="Spatial" parent="Tracks"]

[node name="Track" parent="Tracks/S_Track" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, 12.5, 0, 0 )

[node name="Piston" parent="Tracks/S_Track" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.5, 12.4251, -0.966136, -32.9984 )

[node name="Wall_Left" parent="Tracks/S_Track" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, 14.5211, -0.125678, 0 )

[node name="Wall_Right" parent="Tracks/S_Track" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, 10.4962, -0.125678, 0 )

[node name="S_Marker" parent="Tracks/S_Track" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.25, 12.5, 0.15, -33 )

[node name="D_Track" type="Spatial" parent="Tracks"]

[node name="Track" parent="Tracks/D_Track" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, 7.5, 0, 0 )

[node name="Piston" parent="Tracks/D_Track" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.5, 7.42509, -0.966136, -32.9984 )

[node name="Wall_Left" parent="Tracks/D_Track" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, 9.45544, -0.125678, 0 )

[node name="Wall_Right" parent="Tracks/D_Track" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, 5.50072, -0.125678, 0 )

[node name="D_Marker" parent="Tracks/D_Track" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.25, 7.5, 0.15, -33 )

[node name="F_Track" type="Spatial" parent="Tracks"]

[node name="Track" parent="Tracks/F_Track" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, 2.5, 0, 0 )

[node name="Piston" parent="Tracks/F_Track" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.5, 2.5, -0.966137, -33 )

[node name="Wall_Left" parent="Tracks/F_Track" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, 4.40957, -0.125678, 0 )

[node name="Wall_Right" parent="Tracks/F_Track" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, 0.560517, -0.125678, 0 )

[node name="F_Marker" parent="Tracks/F_Track" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.25, 2.493, 0.15, -33 )

[node name="J_Track" type="Spatial" parent="Tracks"]

[node name="Track" parent="Tracks/J_Track" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, -2.5, 0, 0 )

[node name="Piston" parent="Tracks/J_Track" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.5, -2.5, -0.966137, -33 )

[node name="Wall_Left" parent="Tracks/J_Track" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, -0.515944, -0.125678, 0 )

[node name="Wall_Right" parent="Tracks/J_Track" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, -4.4854, -0.125678, 0 )

[node name="J_Track" parent="Tracks/J_Track" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.25, -2.5, 0.15, -33 )

[node name="K_Track" type="Spatial" parent="Tracks"]

[node name="Track" parent="Tracks/K_Track" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, -7.5, 0, 0 )

[node name="Piston" parent="Tracks/K_Track" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.5, -7.5, -0.966137, -33 )

[node name="Wall_Left" parent="Tracks/K_Track" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, -5.49175, -0.125678, 0 )

[node name="Wall_Right" parent="Tracks/K_Track" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, -9.49636, -0.125678, 0 )

[node name="K_Marker" parent="Tracks/K_Track" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.25, -7.5, 0.15, -33 )

[node name="L_Track" type="Spatial" parent="Tracks"]

[node name="Track" parent="Tracks/L_Track" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, -12.5, 0, 0 )

[node name="Piston" parent="Tracks/L_Track" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.5, -12.5, -0.966137, -33 )

[node name="Wall_Left" parent="Tracks/L_Track" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, -10.5185, -0.125678, 0 )

[node name="Wall_Right" parent="Tracks/L_Track" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, -14.462, -0.125678, 0 )

[node name="L_Marker" parent="Tracks/L_Track" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.25, -12.5, 0.15, -33 )

[node name="SC_Track" type="Spatial" parent="Tracks"]

[node name="Track" parent="Tracks/SC_Track" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, -17.5, 0, 0 )

[node name="Piston" parent="Tracks/SC_Track" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.5, -17.5, -1.05993, -33 )

[node name="Wall_Left" parent="Tracks/SC_Track" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, -15.5907, -0.125678, 0 )

[node name="Wall_Right" parent="Tracks/SC_Track" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, -19.5273, -0.125678, 0 )

[node name="SC_Marker" parent="Tracks/SC_Track" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.25, -17.5, 0.115863, -33 )

[node name="Songs" type="Spatial" parent="."]

[node name="Fur_Elise" type="AudioStreamPlayer" parent="Songs"]
stream = ExtResource( 6 )
volume_db = -5.145

[node name="Dynamite" type="AudioStreamPlayer" parent="Songs"]
stream = ExtResource( 9 )
volume_db = -22.214
script = ExtResource( 14 )

[node name="Bumblebee" type="AudioStreamPlayer" parent="Songs"]
stream = ExtResource( 11 )
volume_db = 1.0
script = ExtResource( 13 )

[node name="Timer" type="Timer" parent="."]

[node name="BufferTimer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="NoteManager" method="_on_Timer_timeout"]
[connection signal="timeout" from="BufferTimer" to="NoteManager" method="_on_BufferTimer_timeout"]
